# Asthma-Exacerbation-Prediction-EHR

./: README.md  pyproject.toml  requirements.txt
scripts/: generate_shap.py  train_models.py
src/asthma_exacerbation/: __init__.py  data_utils.py  metrics.py  modeling.py  shap_utils.py
