[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-ehr-based-prediction-of-pediatric-asthma-exacerbations"
version = "0.1.0"
description = "Modeling and SHAP utilities for pediatric asthma exacerbation prediction from multimodal EHR data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "imbalanced-learn>=0.12",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11,<1.15",
  "scikit-learn>=1.4",
  "scikit-optimize>=0.10",
  "shap>=0.45",
  "xgboost>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
